--- a/manual/index.html
+++ b/manual/index.html
@@ -3394,7 +3394,8 @@
 					entering appropriate data at the <B>hour</B> &amp; <B>minute
 					</B>boxes. Use the up/down arrows if you find them handy. e.g.
 					for execution at time 17:45, enter hour:<B>17 </B>&amp;
-					minute:<B>45</B>.</FONT></P>
+					minute:<B>45</B>.<br><br>
+					If you wish the profile to run on an hourly basis, set the hour value to<b> -1</b></FONT></P>
 				</UL>
 				
 	<OL START=6>
