--- a/manual/index.html
+++ b/manual/index.html
@@ -1239,7 +1239,7 @@
 				<FONT FACE="FreeSans, sans-serif">task type: “sync directories”</FONT></P>
 				<P STYLE="margin-top: 0.1cm; margin-bottom: 0.1cm; border: none; padding: 0cm">
 				<FONT FACE="FreeSans, sans-serif">This will result in a 2-way
-				transfer. Newest modified files will be transfered from source to
+				transfer. Newest modified files will be transferred from source to
 				destination or the other way round. Also freshly created files at
 				one of the locations will be copied over to the other.</FONT></P>
 				<P STYLE="margin-top: 0.1cm; margin-bottom: 0.1cm; border: none; padding: 0cm">
@@ -3885,7 +3885,7 @@
 				These snapshot data displayed in blue color, will replace the relevant source data during a RESTORE procedure<br><br>
 				
 				<font color="#00FF00">Snapshot data that do NOT exist at the source</FONT> <br>
-				These snapshot data displayed in green color, will be transfered over at the source during RESTORE<br><br>
+				These snapshot data displayed in green color, will be transferred over at the source during RESTORE<br><br>
 				
 				<font color="#A020F0">Source data that do NOT exist at the snapshot</FONT> <br>
 				These data that belongs to the source and is displayed in magenta color, will be deleted during RESTORE only if you enable the option: "<b>delete existing source data that do not exist at the backup</b>"</FONT></FONT></P>
